@@ -37,6 +37,9 @@ typedef enum {
 	EVENT_HATE_LIST,
 	EVENT_SPELL_EFFECT_CLIENT,
 	EVENT_SPELL_EFFECT_NPC,
+	EVENT_SPELL_EFFECT_BUFF_TIC_CLIENT,
+	EVENT_SPELL_EFFECT_BUFF_TIC_NPC,
+	EVENT_SPELL_EFFECT_TRANSLOCATE_COMPLETE,
 	
 	_LargestEventID
 } QuestEventID;
